--- a/system/core/templates/core/attendance_register.html
+++ b/system/core/templates/core/attendance_register.html
@@ -35,7 +35,7 @@
 
             <label style="font-size:1.2rem;">出席日数：</label><br>
             <select name="attend_days" class="form-control" style="width:60%;margin:15px auto;font-size:1.2rem;padding:8px;">
-                {% for i in attend_range %}
+                {% for i in attendance_range %}
                     <option value="{{ i }}">{{ i }}</option>
                 {% endfor %}
             </select><br>
