--- a/system/core/templates/core/manual.html
+++ b/system/core/templates/core/manual.html
@@ -85,7 +85,18 @@
 
     <div style="margin-top: 40px;">
         <form method="GET" action="{% url 'core:student_home' %}">
-            <button type="submit" class="btn btn-secondary" style="padding: 12px 35px; font-size: 18px;">← ホームに戻る</button>
+            <button type="submit" class="btn btn-secondary" 
+            style="
+            padding: 12px 35px;
+            font-size: 1.2rem;
+            background-color: #28a745;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 30px;
+            ">← ホームに戻る</button>
         </form>
     </div>
 </div>
