--- a/system/core/templates/core/login.html
+++ b/system/core/templates/core/login.html
@@ -42,11 +42,29 @@
         <!-- ボタン -->
         <div style="margin-top:20px;">
             <button type="submit" name="login" 
-                    style="margin-right:15px; font-size:1.2rem; padding:10px 20px; border-radius:6px; background-color:#007bff; color:white; border:none; cursor:pointer;">
+                           style="
+            padding: 12px 35px;
+            font-size: 1.2rem;
+            background-color: #28a745;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 30px;">
                 ログイン
             </button>
             <button type="submit" name="register"
-                    style="font-size:1.2rem; padding:10px 20px; border-radius:6px; background-color:#6c757d; color:white; border:none; cursor:pointer;">
+                           style="
+            padding: 12px 35px;
+            font-size: 1.2rem;
+            background-color: #28a745;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            display: inline-block;
+            margin-top: 30px;">
                 アカウント作成
             </button>
         </div>
